Live-validate the Sigma build path end to end: exact parity, 11 contract fixes
First live POST gauntlet (local Metabase v0.61.3 jar → Snowflake CSA.TJ →
tj-wells-1989): 8 pilot cards + 2-tab parameterized dashboard → DM + workbook
POST clean → EXACT MCP parity on every element (110,788.35 total; all splits).

Converter fixes (each a live 400 or error-typed column):
- join source: columns (not on) + [Display Name] refs, connectionId on each
  side, left-outer/right-outer/full-outer enum, source+join name fields
- sql elements: [Custom SQL/RAW_ALIAS] column refs + explicit names
- DM controls: required mode discriminant per controlType
- field-filter neutralization: no {{braces}} in comments (Sigma parses them)
- text elements: body not text; stacking: normalized (not 'percent')
- workbook sources: kind data-model for cross-doc DM refs
- explicit-join cards source their card-named join element; implicit-FK cards
  source the derived view, and their dim tables are now ensured (relationships
  survive); pivot field_ref:null reconstruction + pivot-grouping skip
- sigmaDisplayName: AP-style casing (last word capitalizes: Is Email Opt In)

Script hardening:
- remap-wb-to-dm-ids.mjs: column-set fingerprint fallback (sql elements all
  read back 'Custom SQL') + live ref repair of every workbook formula
- metabase-discover.sh: f-string escapes crashed python <=3.12; exec bits on
  six scripts committed 644

design-notes.md: known-unknowns ledger replaced with live-verified contracts
+ §10 validation-loop recipe (incl. scoped-key 403 caveat on all three query
surfaces). Tests updated to the live contracts; suite green.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>